--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,17 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: 
   firebase_auth: 
-  cloud_firestore: 
+  cloud_firestore:
+  firebase_storage: 
+  animate_do: ^3.3.4
+  json_serializable: ^6.1.5
+  build_runner: ^2.1.7
+  get:
+  get_storage:
+  image_picker:
+  dotted_border: 
+  uuid:
+
 
 dev_dependencies:
   flutter_test:
@@ -62,9 +72,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/login_image01.png
+    - assets/images/login_image02.png
+    - assets/images/login_image03.png
+    - assets/images/login_image04.png
+    - assets/images/logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
